5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1662_2968.log
== TEST (2019-04-15 14:13:22) 
-- CODE:
escolha = int(input("L/S"))
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L"
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- ERROR:
File "XXXX", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:23) 
-- CODE:
escolha = int(input("L/S"))
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L"
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- EXECUTION TIME:
0.136004
-- ERROR:
  File "/home/codebench/codes/1662/2968/main.py", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:23) 
-- CODE:
escolha = int(input("L/S"))
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L"
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- ERROR:
File "XXXX", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:43) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L"
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- ERROR:
File "XXXX", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:44) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L"
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- EXECUTION TIME:
0.172165
-- ERROR:
  File "/home/codebench/codes/1662/2968/main.py", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:44) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L"
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- ERROR:
File "XXXX", line 7
    if escolha == "L"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:59) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L":
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:14:01) 
-- CODE:
escolha = input("L/S")
quant1 = float(input("quantos L/S? "))
quant2 = float(input("quantos refrigerantes? "))
contal = (quant1*5) + (quant2*4)
contas = (quant1*3.50) + (quant2*4)

if escolha == "L":
	print(round(contal, 2))
else:
	print(round(contas, 2))
-- EXECUTION TIME:
0.202701
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
58.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
